...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textInventoryNumber"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/editInventoryNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textMultiLine|textNoSuggestions"
                        android:textColor="#000000"
                        android:textColorHint="@color/colorPrimaryDark" />
...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textStatus"
                        android:textSize="16sp" />

                    <Spinner
                        android:id="@+id/editStatus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:textSize="30sp"
                        android:gravity="start|top"
                        android:inputType="textMultiLine"
...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textManufacturer"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/editManufacturer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:gravity="start|top"
                        android:inputType="textMultiLine|textNoSuggestions"
                        android:textColor="#000000" />
...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textModel"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/editModel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:gravity="start|top"
                        android:inputType="textMultiLine|textNoSuggestions"
                        android:textColor="#000000" />
...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textCategory"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/editCategory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:gravity="start|top"
                        android:inputType="textMultiLine|textNoSuggestions"
                        android:textColor="#000000" />
...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textSerialnumber"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/editSerialnumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:gravity="start|top"
                        android:inputType="textMultiLine|textNoSuggestions"
                        android:textColor="#000000" />
...
                        android:id="@+id/textNotes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textNotes" />

                    <EditText
                        android:id="@+id/editNotes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:gravity="start|top"
                        android:inputType="textMultiLine|textNoSuggestions"
                        android:textColor="#000000" />
...


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/btnSaveText"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
...
