<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainHub.MainHubFragment"
    android:id="@+id/fragmentMainhub">

    <Button
        android:id="@+id/btnScan"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="20dp"
        android:text="Scannen"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnHistory"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Scannen" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="20dp"
        android:text="Termine"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnInventory"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Gerät suchen" />

    <Button
        android:id="@+id/btnHistory"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:text="Verlauf"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnSettings"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="verlauf" />

    <Button
        android:id="@+id/btnInventory"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="20dp"
        android:text="Inventar anzeigen"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnAdd"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSettings"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="30dp"
        android:foreground="@android:drawable/ic_menu_manage"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="30dp"
        android:text="Gerät hinzufügen"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Gerät hinzufügen" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="304dp"
        android:layout_height="104dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="50dp"
        android:src="@drawable/dallmann"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>