...

        <action
            android:id="@+id/action_FirstFragment_to_recycleActivity"
            app:destination="@id/recycleActivity" />
        <action
            android:id="@+id/action_FirstFragment_to_addDeviceActivity"
            app:destination="@id/addDeviceActivity" />
        <action
            android:id="@+id/action_FirstFragment_to_scanDeviceActivity"
            app:destination="@id/scanDeviceActivity" />
        <action
            android:id="@+id/action_FirstFragment_to_placeholder2"
            app:destination="@id/Settings" />
...
        android:label="activity_Login"
        tools:layout="@layout/activity_login" />
    <activity
        android:id="@+id/settings"
        android:name="com.example.asset_management.settings.SettingsActivity"
        android:label="activity_Settings"
        tools:layout="@layout/activity_settings" />

    <fragment android:id="@+id/Settings" >
        <action
            android:id="@+id/action_placeholder2_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
...
